# muid

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
muid/: __init__.py  cli.py  magicid.py  utils.py
tests/: conftest.py  test_muid.py  test_pydantic.py
